# meilisearch-dumper

./: Cargo.toml  README.md
src/: args.rs  dump.rs  main.rs
