[package]
name = "meilisearch-dumper"
version = "0.1.0"
edition = "2021"
description = "A high-performance tool for generating MeiliSearch dump files from JSON data"
authors = ["AdySec <admin@adysec.com>"]
repository = "https://github.com/adysec/meilisearch-dumper"
keywords = ["meilisearch", "dump", "import", "json", "search"]
categories = ["command-line-utilities", "data-processing"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tar = "0.4"
flate2 = "1.0"
walkdir = "2.3"
sysinfo = "0.35.2"
json-stream = "0.1.1"
ndjson-stream = "0.1.0"
